create halaman intro

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - images/
-   - images/background.png
-   - images/logo.png
-   - images/oval.png
+   - assets/images/
+   - assets/images/shape.png
+   - assets/images/logo.png
+   - assets/images/oval.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -76,6 +76,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Jost
+      fonts:
+        - asset: assets/fonts/Jost/Jost-Regular.ttf
+        - asset: assets/fonts/Jost/Jost-Bold.ttf
+          weight: 700
+    - family: Mulish
+      fonts:
+        - asset: assets/fonts/Mulish/Mulish-Regular.ttf
+        - asset: assets/fonts/Mulish/Mulish-Bold.ttf
+
   # fonts:
   #   - family: Schyler
   #     fonts:
