Menambahkan halaman login dan register

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ flutter:
    - assets/images/shape.png
    - assets/images/logo.png
    - assets/images/oval.png
+   - assets/images/logo_login.png
+   - assets/images/agree.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
