--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,11 @@ flutter:
    - assets/images/oval.png
    - assets/images/logo_login.png
    - assets/images/agree.png
+   - assets/images/congratulation_password.png
+   - assets/images/loading.png
+   - assets/images/slide1.png
+   - assets/images/slide2.png
+   - assets/images/slide3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
