--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,14 @@ flutter:
    - assets/images/slide1.png
    - assets/images/slide2.png
    - assets/images/slide3.png
+   - assets/images/category0.png
+   - assets/images/category1.png
+   - assets/images/category2.png
+   - assets/images/category3.png
+   - assets/images/category4.png
+   - assets/images/category5.png
+   - assets/images/category6.png
+   - assets/images/category7.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
