addnewcard,payment,profile,editprofile,

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
    - assets/images/oval.png
    - assets/images/logo_login.png
    - assets/images/agree.png
+   - assets/images/ic_congratulation.png
    - assets/images/congratulation_password.png
    - assets/images/loading.png
    - assets/images/slide1.png
